# gusgba

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
src/: arm.c  arm.h  arm7.c  arm7.h  arm7_debug.c  arm7_debug.h  arm_debug.c  arm_debug.h  arm_isa.c  arm_isa.h  main.c  mmu.c  mmu.h
src/asm/: arm7_enc.c  arm7_enc.h  arm_enc.c  arm_enc.h  error.c  error.h  lex.c  lex.h  parser.c  parser.h  token.c  token.h
test/: arm7_test.c  arm_test.c  main.c  test.h  ut.h
test/asm/: asm.c  asm.h  lex_test.c  parser_test.c
